# DjangoShipFast

./: .coverage  .dockerignore  .env  .env.example  .env_example  .gitignore  .pylintrc  Dockerfile  Dockerfile-local  Procfile  README.md  docker-compose.yml  makefile  manage.py  package-lock.json  package.json  pyproject.toml  pytest.ini  railway.toml  requirements.txt  start.sh  tailwind.config.js  vite.config.mjs
.github/: PULL_REQUEST_TEMPLATE.md
.github/PULL_REQUEST_TEMPLATE/: template.md
.github/workflows/: pull-request.yml
DjangoTemplate/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
DjangoTemplate/settings/: __init__.py  default.py  local_example.py
apps/main/: admin.py  bot.py  consts.py  context_processors.py  emails.py  forms.py  inlines.py  middleware.py  models.py  tasks.py  urls.py  views.py
apps/payments/: admin.py  apps.py  models.py  urls.py  views.py
apps/theme/: apps.py
apps/users/: adapters.py  admin.py  auth.py  forms.py  middleware.py  models.py  views.py
core/: celery.py  urls.py  urls_debug.py
core/settings/: default.py  (+1 more)
deploy/: start.sh
django_template/: dev_utils.py  urls.py
frontend/: package-lock.json  package.json  vite.config.js  vite.config.mjs
main/: admin.py  context_processors.py  forms.py  middleware.py  tasks.py  urls.py  views.py
requirements/: base.txt  dev.txt  linter.txt  prod.txt
source_scss/: Dockerfile
templates/: base.html  meta_tags.html
tests/: base.py  settings.py  test_main.py  test_referral.py  test_templatetags.py
users/: admin.py  forms.py  models.py  utils.py  views.py
(+93 files in other folders)
